fixed spacing and colour of font on sign up page

--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,10 @@ footer p {
   padding: .3em 1.5em;
 }
 
+.table-btn:hover {
+  opacity: .5;
+}
+
 .pers-btn {
   border: 2px solid #ed5943;
 }
@@ -435,6 +439,10 @@ footer p {
   opacity: .5;
   transition: opacity .35s;
   cursor: pointer;
+}
+
+.sign-up-text {
+  font-family: Roboto, sans-serif
 }
 
 input,
